# win-utils-feedstock

./: README.md
recipe/: bld.bat  meta.yaml
recipe/winhttp-head/: CMakeLists.txt  winhttp-head.cpp
